update ballots query: apply os_multiplier
